# src/routes/index.ts
@@ -4,7 +4,8 @@ import currencyExchange from './currencyExchange';
 
 const app = express();
 
-app.use('/v1/currencyexchange', currencyExchange);
 app.use('/', root);
+app.use('/v1/', currencyExchange);
+
 
 export default app;
